day4/09_opa_gatekeeper/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  # brak labela `owner` — admission webhook odrzuci
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
