day4/09_opa_gatekeeper/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    owner: team-platform
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
