day4/09_opa_gatekeeper/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-owner-label
spec:
  enforcementAction: deny           # deny | dryrun | warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - default
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - cert-manager
      - envoy-gateway-system
      - falco
      - trivy-system
  parameters:
    labels:
      - owner
